# RiskMove

./: .env  README.md  main.py  pyproject.toml  risk_move.db
app/: main.py
app/application/: auth_service.py  history_service.py  scoring_service.py
app/domain/: models.py
app/infrastructure/: bureau_service.py  database.py  ml_model.py  security.py
app/infrastructure/fixtures/: bureau_fixtures.py
app/interfaces/: api.py  auth_api.py  bureau_api.py  user_api.py
data/: correlations_with_target.csv  data_dictionary.csv
docs/: AI_Analysis_Explainability.md  API_Documentation.md  Project_Status.md  Roadmap.md
docs/.obsidian/: workspace.json
migrations/: env.py
migrations/versions/: 64c0e36646dd_add_new_field_to_user.py  7d3d84942ba3_fix.py  900cb6931c56_add_pin_field_to_user.py  c8cb2522d2ab_initial_migration.py  d45c9c0e8c02_fix.py  e6a32b5c2b46_fix.py
models/: credit_model.joblib  explainer.joblib  features.joblib
scripts/: data_prep.py  test_api.py  train_model.py
